// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCreation should render the character creation screen with no props 1`] = `
<View>
  <View>
    <Text>
      Name
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="words"
      autoCorrect={false}
      autoFocus={true}
      onChangeText={[Function]}
      placeholder="Name"
      testID="character-name-entry"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View>
    <Text>
      Class
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Class"
      testID="character-class-entry"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View>
    <Text>
      Gender
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Gender"
      testID="character-gender-entry"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    testID="create-character-view"
  >
    <Text>
      Create Character
    </Text>
  </View>
</View>
`;

exports[`CharacterCreation should render the character creation screen with props 1`] = `
<View>
  <View>
    <Text>
      Name
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="words"
      autoCorrect={false}
      autoFocus={true}
      onChangeText={[Function]}
      placeholder="Name"
      testID="character-name-entry"
      underlineColorAndroid="transparent"
      value="Test Character"
    />
  </View>
  <View>
    <Text>
      Class
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Class"
      testID="character-class-entry"
      underlineColorAndroid="transparent"
      value="TestClass"
    />
  </View>
  <View>
    <Text>
      Gender
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Gender"
      testID="character-gender-entry"
      underlineColorAndroid="transparent"
      value="Female"
    />
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="create-character-button"
  >
    <Text>
      Create Character
    </Text>
  </View>
</View>
`;
